css/styles.css
/* ... */
.close-btn:hover,
.close-btn:focus {
  background-color: var(--ocean);
  border: none;
}

.close-btn .icon {
  fill: var(--navy-blue);
  padding: 0;

  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.close-btn:hover .icon,
.close-btn:focus .icon {
  fill: var(--white);
}

/* SOCIAL LINK ITEM */

.social-link-item {
  width: 40px;
  height: 40px;
}

.social-link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: var(--iris);
  border-radius: 50%;
  transition-property: background-color;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.social-link .icon {
  fill: var(--cloud);
}

/* #endregion */
/* !==================== */
/* #region HEADER STYLES */

.page-header {
  border-bottom: 1px solid var(--cornflower);
  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
  background: var(--white);
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.logo {
  font-family: var(--second-family);
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: var(--iris);
}

.header-logo {
  display: block;
  padding: 16px 0;
}

.header-logo .logo-part {
  color: var(--navy-blue);
}

.nav-list,
.contacts {
  display: none;
}

.burger-button {
  padding: 0;
  border: none;
  background-color: transparent;
}

.burger-icon {
  display: block;
  fill: #2f2f37;
}

@media screen and (min-width: 768px) {
  .burger-button {
    display: none;
  }

  .header-nav {
    display: flex;
    align-items: center;
  }

  .header-logo {
    padding: 24px 0;
    margin-right: 120px;
  }

  .nav-list {
    display: flex;
    align-items: center;
    gap: 40px;
  }

  .nav-link {
    display: inline-block;
    padding: 24px 0;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--navy-blue);

    transition-property: color var(--animation);
  }

  .nav-link.current {
    position: relative;
    color: var(--ocean);
  }

  .nav-link.current::after {
    content: '';

    position: absolute;
    left: 0;
    bottom: -1px;

    width: 100%;
    height: 4px;
    border-radius: 2px;

    background-color: var(--ocean);
  }

  .contacts {
    display: block;
  }

  .contacts-list {
    display: flex;
    flex-direction: column;
    row-gap: 12px;
  }

  .contacts-link {
    display: block;
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;

    color: var(--slate);

    transition: color var(--animation);
  }

  .nav-link:hover,
  .nav-link:focus,
  .contacts-link:hover,
  .contacts-link:focus {
    color: var(--ocean);
  }
}

@media screen and (min-width: 1158px) {
  .header-logo {
    margin-right: 76px;
  }

  .contacts-list {
    flex-direction: row;
    align-items: center;
    gap: 40px;
  }

  .contacts-link {
    padding: 24px 0;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;

    color: var(--slate);

    transition: color var(--animation);
  }
}

/* #endregion */
/* !==================== */
/* #region MOBILE MENU */

.mobile-menu {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 555;

  width: 100%;
  height: 100%;
  background-color: var(--white);

  opacity: 0;
  visibility: hidden;
  pointer-events: none;

  transition: opacity var(--animation), visibility var(--animation);
}

.mobile-menu.is-open {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
}

/* Close button styles are located in COMPONENT STYLES */

.mobile-menu-nav {
  margin-bottom: auto;
}

.mobile-menu-nav-list {
  display: flex;
  flex-direction: column;
  row-gap: 40px;
}

.mobile-menu-nav-link {
  display: inline-block;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
  transition-property: color var(--animation);
}

.mobile-menu-contacts {
  display: block;
  padding-bottom: 48px;
}

.mobile-menu-contacts-list {
  display: flex;
  flex-direction: column;
  row-gap: 24px;
}

.mobile-menu-contacts-link {
  display: block;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;

  color: var(--slate);

  transition: color var(--animation);
}

.nav-link:hover,
.nav-link:focus,
.contacts-link:hover,
.contacts-link:focus {
  color: var(--ocean);
}

.mobile-social-links {
  display: flex;
  justify-content: space-between;
}

.mobile-menu .social-link:hover,
.mobile-menu .social-link:focus {
  background-color: var(--green);
}

@media screen and (min-width: 768px) {
  .mobile-menu {
    display: none;
  }
}
/* #endregion */
/* !==================== */
/* #region HERO STYLES */

.hero {
  max-width: 320px;
  background-color: #2e2f42;
  background-image: linear-gradient(var(--grey), var(--grey)),
    url(../images/people-office.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  padding: 72px 0;
  margin: auto;
}

@media (min-resolution: 192dpi) {
  .hero {
    background-image: linear-gradient(var(--grey), var(--grey)),
      url(../images/people-office@2x.jpg);
  }
}

.hero-title {
  max-width: 200px;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.1;
  color: var(--white);
  text-align: center;
  margin: 0 auto 72px;
}

@media screen and (min-width: 768px) {
  .hero {
    max-width: 768px;
    padding: 112px 0;
  }

  .hero-title {
    max-width: 496px;
    font-size: 56px;
    line-height: 1.07;
    margin: 0 auto 36px;
  }

  /* Button styles location - COMPONENT STYLES */
}

@media screen and (min-width: 1158px) {
  .hero {
    max-width: 1440px;
    padding: 188px 0;
  }

  .hero-title {
    margin: 0 auto 48px;
  }
}

/* #endregion */
/* !==================== */
/* #region BENEFITS STYLES */

.benefits-icon-wraper {
  display: none;
}
/* ... */

